--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body class="fullscreen">
   <div class="container">
     <h1 class="title">Hello World!</h1>
+	<button onclick="ROStart();">START DEMO</button>
   </div>
   <script src="js/main.js"></script>
 </body>
