--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			body, html { padding:0; margin:0; }
 		</style>
 		<script type="text/javascript">
+                function initialize() {
 			var ROConfig = {
 				remoteClient:    "//grf.robrowser.com/",
 				servers: [{
@@ -38,18 +39,13 @@
 					IntroMessage:  {},
 					LoadingDonate: {}
 				}
-			};
+			 };
+                         var RO = new ROBrowser(ROConfig);
+		         RO.start();
+		}
+		window.addEventListener("load", initialize, false);
 		</script>
 		<script type="text/javascript" src="https://demo.robrowser.com/?demo/2.7/Online.js?1.272"></script>
-		<script type="text/javascript">
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-27773234-1', 'robrowser.com/');
-ga('send', 'pageview', '/demo/');
-setInterval(function(){  ga('send', 'event', 'time', 'ping', 'alive', Date.now() ); }, 60000);
-		</script>
 </head>
 <body class="fullscreen">
   <div class="container">
