--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 		window.addEventListener("load", initialize, false);
 		</script>
 		<script type="text/javascript" src="https://demo.robrowser.com/?demo/2.7/Online.js?1.272"></script>
+	<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="Plugins/IntroMessage/IntroMessage" src="https://demo.robrowser.com/?demo/2.7/src/Plugins/IntroMessage/IntroMessage.js?1.272"></script>
+	<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="Plugins/LoadingDonate/LoadingDonate" src="https://demo.robrowser.com/?demo/2.7/src/Plugins/LoadingDonate/LoadingDonate.js?1.272"></script>
 </head>
 <body class="fullscreen">
   <div class="container">
