--- a/index.html
+++ b/index.html
@@ -1,57 +1,59 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Hello World</title>
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="images/hello-icon-152.png">
-  <meta name="theme-color" content="white"/>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Hello World">
-  <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
-  <meta name="msapplication-TileColor" content="#FFFFFF">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover" />
-		<style type="text/css">
-			body, html { padding:0; margin:0; }
-		</style>
-		<script type="text/javascript">
-                function initialize() {
-			var ROConfig = {
-				remoteClient:    "//grf.robrowser.com/",
-				servers: [{
-					display:     "Demo Server",
-					desc:        "roBrowser's demo server",
-					address:     "127.0.0.1",
-					port:        6900,
-					version:     25,
-					langtype:    12,
-					packetver:   20130618,
-					socketProxy: "wss://connect.robrowser.com/",
-					adminList:   [2000000]
-				}],
-				saveFiles:       true,
-				skipServerList:  true,
-				version:         1.272,
-				plugins: {
-					IntroMessage:  {},
-					LoadingDonate: {}
-				}
-			 };
-                         var RO = new ROBrowser(ROConfig);
-		         RO.start();
-		}
-		window.addEventListener("load", initialize, false);
-		</script>
-		<script type="text/javascript" src="https://demo.robrowser.com/?demo/2.7/Online.js?1.272"></script>
-	<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="Plugins/IntroMessage/IntroMessage" src="https://demo.robrowser.com/?demo/2.7/src/Plugins/IntroMessage/IntroMessage.js?1.272"></script>
-	<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="Plugins/LoadingDonate/LoadingDonate" src="https://demo.robrowser.com/?demo/2.7/src/Plugins/LoadingDonate/LoadingDonate.js?1.272"></script>
-</head>
-<body class="fullscreen">
-  <div class="container">
-  </div>
-  <script src="js/main.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Hello World</title>
+        <link rel="manifest" href="manifest.json">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+        <link rel="apple-touch-icon" href="images/hello-icon-152.png">
+        <meta name="theme-color" content="white"/>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="Hello World">
+        <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
+        <meta name="msapplication-TileColor" content="#FFFFFF">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"/>
+        <style type="text/css">
+            body, html {
+                padding: 0;
+                margin: 0;
+            }
+        </style>
+        <script type="text/javascript" src="https://demo.robrowser.com/?demo/2.7/Online.js?1.272"></script>
+        <script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="Plugins/IntroMessage/IntroMessage" src="https://demo.robrowser.com/?demo/2.7/src/Plugins/IntroMessage/IntroMessage.js?1.272"></script>
+        <script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="Plugins/LoadingDonate/LoadingDonate" src="https://demo.robrowser.com/?demo/2.7/src/Plugins/LoadingDonate/LoadingDonate.js?1.272"></script>
+        <script type="text/javascript">
+            function initialize() {
+                var ROConfig = {
+                    remoteClient: "//grf.robrowser.com/",
+                    servers: [{
+                        display: "Demo Server",
+                        desc: "roBrowser's demo server",
+                        address: "127.0.0.1",
+                        port: 6900,
+                        version: 25,
+                        langtype: 12,
+                        packetver: 20130618,
+                        socketProxy: "wss://connect.robrowser.com/",
+                        adminList: [2000000]
+                    }],
+                    saveFiles: true,
+                    skipServerList: true,
+                    version: 1.272,
+                    plugins: {
+                        IntroMessage: {},
+                        LoadingDonate: {}
+                    }
+                };
+                var RO = new ROBrowser(ROConfig);
+                RO.start();
+            }
+            window.addEventListener("load", initialize, false);
+        </script>
+    </head>
+    <body class="fullscreen">
+        <div id="robrowser">Initializing roBrowser...</div>
+        <script src="js/main.js"></script>
+    </body>
 </html>
